--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
+ <!DOCTYPE html>
+ <html lang="fr">
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+ </head>
+ <body>
+ 
+ 
  <footer>
 
-                <div class="text-center text-white">
+                <div class="text-center text-white bg-dark">
                     <div class="container pt-4">
                         <!-- Section: Social media -->
 
@@ -72,3 +84,10 @@
 
             </div>
         </footer>
+
+
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        
+      </body>
+      </html>
