--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
                             data-mdb-ripple-init=""
                             ><i class="fab fa-github"></i
                           ></a>
+
+                          <!-- Github -->
+                          <a
+                            class="bouton-yann btn btn-link btn-floating btn-lg text-light m-1"
+                            href="#"
+                            role="button"
+                            data-mdb-ripple-init=""
+                            ><i class="fab fa-github"></i
+                          ></a>
                         </section>
                         <!-- Section: Social media -->
                       </div>
